--- a/Shoes Inn/About.html
+++ b/Shoes Inn/About.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Shoes Inn</title>
+<title>About</title>
 <link href='http://fonts.googleapis.com/css?family=Marko+One' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="Styles.css" > 
 </head>
@@ -57,31 +57,37 @@ li a:hover {
 </style>
 <body>
 
+
 <header>
 <h1>Shoes Inn</h1>
 
 <div id="info">
 
 <ul>
-  <li><a class="active" href="#home">Home</a></li>
+  <li><a class="active" href="index.html">Home</a></li>
   <li><a href="Company Brand.html">Company</a></li>
-  <li><a href="About.html">About</a></li>
   <li><a href="Contact.html">Contact</a></li>
 </ul>
 </head>
 <body>
 </header>
-<center><p>Click on the shoes if you want to order one.</p></center>
+
 <p>
-<a href="OrderShoes.html"><img src="images/1.jpg" alt="1"></a>
-<a href="OrderShoes.html"><img src="images/2.jpg" alt="2"></a>
-<a href="OrderShoes.html"><img src="images/3.jpg" alt="3"></a>
-<a href="OrderShoes.html"><img src="images/4.jpg" alt="4"></a>
-<a href="OrderShoes.html"><img src="images/5.jpg" alt="5"></a>
-<a href="OrderShoes.html"><img src="images/6.jpg" alt="6"></a>
+Welcome to our website here is a little Info about us.
 </p>
 
-<hr class="new5">
+<img src="images/11.jpg" alt="3"></a></imag>
+<p>
+GOAL<br>
+are goals is to get shoes on the market by working with other Shoes company it will help us to get a start kick to sells shoes across America as well the world to.
+</p>
+
+<img src="images/12.jpg" alt="4"></a></imag>
+<p>
+AIM<br>
+The Aim that is part of are goal is to give every kids a good quilty shoe and as well a three sets of shoes for anyone at a very low cost of selling the prodouct to the customrs that want to buy our product.
+</p>
+
 
 </body>
 </html>
