--- a/Shoes Inn/Company Brand.html
+++ b/Shoes Inn/Company Brand.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Shoes Inn</title>
+<title>Designer</title>
 <link href='http://fonts.googleapis.com/css?family=Marko+One' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="Styles.css" > 
 </head>
@@ -63,23 +63,36 @@ li a:hover {
 <div id="info">
 
 <ul>
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="Company Brand.html">Company</a></li>
+  <li><a class="active" href="index.html">Home</a></li>
   <li><a href="About.html">About</a></li>
   <li><a href="Contact.html">Contact</a></li>
+  
 </ul>
 </head>
 <body>
 </header>
-<center><p>Click on the shoes if you want to order one.</p></center>
-<p>
-<a href="OrderShoes.html"><img src="images/1.jpg" alt="1"></a>
-<a href="OrderShoes.html"><img src="images/2.jpg" alt="2"></a>
-<a href="OrderShoes.html"><img src="images/3.jpg" alt="3"></a>
-<a href="OrderShoes.html"><img src="images/4.jpg" alt="4"></a>
-<a href="OrderShoes.html"><img src="images/5.jpg" alt="5"></a>
-<a href="OrderShoes.html"><img src="images/6.jpg" alt="6"></a>
-</p>
+<h1>Company of the Shoes</h1>
+
+<img src="images/1.png" alt="1"></a></imag>
+
+<h1>Adidas</h1>
+
+<img src="images/2.png" alt="2"></a></imag>
+
+<h1>Asiscs</h1>
+
+
+<img src="images/3.png" alt="3"></a></imag>
+
+
+<h1>Nike</h1>
+
+
+<img src="images/4.png" alt="4"></a></imag>
+
+<h1>Converse All Stars</h1>
+
+NOTE# the logo are real but are fictional in a company friendship deal to this website. 
 
 <hr class="new5">
 
